// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# integration test ## should generate design 1`] = `
"info: Initializing git repository testoutput/.git
info: Generating testoutput/CMakeLists.txt from template templates/CMakeLists.txt._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout out branch master
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design and run cmake commands 1`] = `
"info: Initializing git repository testoutput/.git
info: Generating testoutput/CMakeLists.txt from template templates/CMakeLists.txt._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout out branch master
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design with merge 1`] = `
"info: Initializing git repository testoutput/.git
info: Generating testoutput/CMakeLists.txt from template templates/CMakeLists.txt._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout out branch master
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design with merge 2`] = `
"info: Opening git repository testoutput/.git
warn: Ignoring error Error: cannot stash changes - there is nothing to stash.
info: Attempting to use branch master-sgen-generated
warn: Checkout out branch master-sgen-generated
info: Generating testoutput/CMakeLists.txt from template templates/CMakeLists.txt._
warn: Checkout out branch master-sgen-generated
warn: Checkout out branch master-sgen-generated
warn: Nothing changed in generated files
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should print help options 1`] = `
"Usage:
  node sgen [OPTION]

Options:
  -m, --map=ARG+       mapping files
  -d, --design=ARG+    design files
  -e, --extension=ARG+ extension directories or files
  -o, --output=ARG     output directory for generated files
      --overwrite=ARG  Overwrite modes, can be one of skip, regen, error or merge                         (default: skip)
      --forceOverwrite Override overwrite flags in the generator map with the one provided on --overwrite
  -h, --help           display this help
"
`;
